--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,43 +9,73 @@ project(libarchive_superbuild
 
 set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
-option(libarchive_superbuild_STAGE_OUTPUTS "Stage build output artifacts into proper directory structure" ON)
+option(libarchive_sb_STAGE_OUTPUTS "Stage build output artifacts into proper directory structure" ON)
 
-option(libarchive_superbuild_USE_LOCAL_PACKAGES "Use local (usually system installed) packages for dependencies." OFF)
-option(libarchive_superbuild_USE_LOCAL_PACKAGES_ONLY "Forbid the build system from downloading missing dependencies." OFF)
+option(libarchive_sb_USE_LOCAL_PACKAGES "Use local (usually system installed) packages for dependencies." OFF)
+option(libarchive_sb_USE_LOCAL_PACKAGES_ONLY "Forbid the build system from downloading missing dependencies." OFF)
 
 if(NOT DEFINED CPM_USE_LOCAL_PACKAGES)
-    set(CPM_USE_LOCAL_PACKAGES ${libarchive_superbuild_USE_LOCAL_PACKAGES} CACHE BOOL "CPM will try to find packages locally first" FORCE)
+    set(CPM_USE_LOCAL_PACKAGES ${libarchive_sb_USE_LOCAL_PACKAGES} CACHE BOOL "CPM will try to find packages locally first" FORCE)
 endif()
 if(NOT DEFINED CPM_LOCAL_PACKAGES_ONLY)
-    set(CPM_LOCAL_PACKAGES_ONLY ${libarchive_superbuild_USE_LOCAL_PACKAGES_ONLY} CACHE BOOL
+    set(CPM_LOCAL_PACKAGES_ONLY ${libarchive_sb_USE_LOCAL_PACKAGES_ONLY} CACHE BOOL
         "CPM will not be forbidden from downloading packages. Will have to use local packages." FORCE)
 endif()
 
 # Baseline dependencies
-option(ENABLE_MBEDTLS "" OFF)
-set(ENABLE_NETTLE OFF) # UNSUPPORTED and therefore forced OFF (reason: does not support CMake)
+option(ENABLE_MBEDTLS "" ON)
+set(ENABLE_NETTLE OFF) # UNSUPPORTED and therefore OFF (reason: does not support CMake)
 option(ENABLE_OPENSSL "" OFF) # Wierd errors on MSVC as well as MSYS2 ... both seem fixable though
 
 # Hash related dependencies
-option(ENABLE_LIBB2 "" OFF) # UNSUPPORTED and therefore forced OFF (reason: does not support CMake)
+option(ENABLE_LIBB2 "" OFF) # UNSUPPORTED and therefore OFF (reason: does not support CMake)
 option(ENABLE_LZ4 "" ON)
 option(ENABLE_LZO "" ON) # Need to turn off before release
 option(ENABLE_LZMA "" ON)
 option(ENABLE_ZSTD "" ON)
 
 option(ENABLE_ZLIB "" ON)
-option(ENABLE_BZip2 "" ON)
-option(ENABLE_LIBXML2 "" OFF) # UNSUPPORTED for now (reason: requires inconv which is not really available everywhere)
+option(ENABLE_BZip2 "" OFF) # UNIMPLEMENTED
 
+# Sequencial usage by libarchive: Uses LIBXML2 if available, if not tries EXPAT, if not tries WIN32_XMLITE
+# Settings here should reflect that, as only one will ever get linked in libarchive
+option(ENABLE_LIBXML2 "" OFF) # UNSUPPORTED for now and therefore OFF (reason: requires inconv which is not really available everywhere)
+option(ENABLE_ICONV "" ${ENABLE_LIBXML2}) # This is used for LIBXML2, if libiconv is disabled then LIBXML2 won't be linked (or otherwise obtained)
+option(ENABLE_EXPAT "" OFF) # UNIMPLEMENTED
+option(ENABLE_PCREPOSIX "" OFF) # UNIMPLEMENTED. This should not be used in this day and age
+option(ENABLE_PCRE2POSIX "" OFF) # UNIMPLEMENTED
+option(ENABLE_LIBGCC "" ON)
+option(ENABLE_WIN32_XMLLITE "" ON) # Nothing to implement ... we think (reason: only available on native Windows)
+option(ENABLE_CNG "" ON) # Nothing to implement ... we think (reason: only available on native Windows)
 
-option(ENABLE_LZ4 "" ON)
+option(libarchive_sb_XATTR "Enable extended attribute support" OFF) # UNSUPPORTED and therefore forced OFF (reason: only available on Linux)
+option(libarchive_sb_ACL "Enable ACL support" OFF) # UNSUPPORTED and therefore forced OFF (reason: only available on Linux)
 
-
-option(ENABLE_ICONV "" OFF)
+# Executables that are otherwise built by the libarchive project
 option(ENABLE_TAR "" OFF)
 option(ENABLE_CPIO "" OFF)
 option(ENABLE_CAT "" OFF)
+option(ENABLE_UNZIP "" OFF)
+
+# Other settings - we don't want to inherit the settings from projects that include libarchive_superbuild
+option(libarchive_sb_ENABLE_TEST "Passed to libarchive" OFF)
+option(libarchive_sb_ENABLE_COVERAGE "Passed to libarchive" OFF)
+option(libarchive_sb_ENABLE_INSTALL "Passed to libarchive" OFF) # UNSUPPORTED and therefore forced OFF (reason: not the goal of this project to allow that)
+
+# Forces using CPM to find 
+option(libarchive_sb_MBEDTLS_FORCE_CPM "" ON)
+option(libarchive_sb_OPENSSL_FORCE_CPM "" OFF)
+
+option(libarchive_sb_LIBB2_FORCE_CPM "" OFF)
+option(libarchive_sb_LZ4_FORCE_CPM "" OFF)
+option(libarchive_sb_LZO_FORCE_CPM "" OFF)
+option(libarchive_sb_LZMA_FORCE_CPM "" OFF)
+option(libarchive_sb_ZSTD_FORCE_CPM "" OFF)
+
+option(libarchive_sb_ZLIB_FORCE_CPM "" OFF)
+option(libarchive_sb_BZip2_FORCE_CPM "" OFF)
+
+option(libarchive_sb_LIBXML2_FORCE_CPM "" OFF)
 
 
 include(cmake/CPM.cmake)
@@ -58,8 +88,8 @@ include(cmake/stdlibQuery.cmake)
 # Staging
 #-----------------------------------------------------------------------------
 include(cmake/StageOutputs.cmake)
-if(libarchive_superbuild_STAGE_OUTPUTS)
-    stageOutputDirsFor(libarchive_superbuild)
+if(libarchive_sb_STAGE_OUTPUTS)
+    stageOutputDirsFor(libarchive_sb)
 endif()
 
 
@@ -68,7 +98,7 @@ endif()
 #-----------------------------------------------------------------------------
 
 # Try to just find libarchive, if found its all good
-if(libarchive_superbuild_USE_LOCAL_PACKAGES_ONLY)
+if(libarchive_sb_USE_LOCAL_PACKAGES_ONLY)
     find_package(LibArchive OPTIONAL GLOBAL)
 endif()
 
@@ -79,17 +109,38 @@ if(NOT LibArchive_FOUND)
     # Obtain baseline dependencies 
     #-----------------------------------------------------------------------------
     if(ENABLE_MBEDTLS)
-        if(libarchive_superbuild_USE_LOCAL_PACKAGES)
+        if(libarchive_sb_USE_LOCAL_PACKAGES AND (NOT libarchive_sb_MBEDTLS_FORCE_CPM))
             find_package(MbedTLS OPTIONAL CONFIG)
+            if(NOT MbedTLS_FOUND)
+                message(STATUS "MbedTLS: Not found using find_package(). Trying to download and build from source using CPM.")
+            endif()
         endif()
 
         if(NOT MbedTLS_FOUND)
             CPMAddPackage(
-                URI "gh:Mbed-TLS/mbedtls@4.0.0"
+                URL https://github.com/Mbed-TLS/mbedtls/releases/download/mbedtls-4.0.0/mbedtls-4.0.0.tar.bz2
+                URL_HASH SHA256=2f3a47f7b3a541ddef450e4867eeecb7ce2ef7776093f3a11d6d43ead6bf2827
                 OPTIONS
+                "USE_SHARED_MBEDTLS_LIBRARY OFF"
+                "USE_STATIC_MBEDTLS_LIBRARY ON"
+                "USE_SHARED_TF_PSA_CRYPTO_LIBRARY OFF"
+                "USE_STATIC_TF_PSA_CRYPTO_LIBRARY ON"
                 "ENABLE_TESTING OFF"
                 "ENABLE_PROGRAMS OFF"
+                EXCLUDE_FROM_ALL TRUE
+                NAME MbedTLS_LOCAL
             )
+            # This is a hack to trick the ancient-style CMakeLists script in libarchive
+            set(MBEDTLS_INCLUDE_DIRS ${MbedTLS_LOCAL_SOURCE_DIR}/include)
+            set(MBEDTLS_LIBRARY MbedTLS::mbedtls)
+            set(MBEDX509_LIBRARY MbedTLS::mbedx509)
+            set(MBEDCRYPTO_LIBRARY tfpsacrypto)
+            find_package_handle_standard_args(TFPSACRYPTO DEFAULT_MSG MBEDCRYPTO_LIBRARY MBEDTLS_INCLUDE_DIRS)
+            if(NOT TFPSACRYPTO_FOUND)
+                message(FATAL_ERROR "MbedTLS: CMake was not successful is obtaining and setting up MbedTLS using CPM (attempt to build from source).
+                 This should never happen unless the upstream repo is broken or otherwise made incompatible.")
+            endif()
+
         endif()
     endif()
 
@@ -97,7 +148,7 @@ if(NOT LibArchive_FOUND)
         if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
             message(STATUS "OpenSSL is deprecated on MacOS - Disabling finding and/or building it")
         else()
-            if(libarchive_superbuild_USE_LOCAL_PACKAGES)
+            if(libarchive_sb_USE_LOCAL_PACKAGES AND (NOT libarchive_sb_OPENSSL_FORCE_CPM))
                 find_package(OpenSSL OPTIONAL)
             endif()
 
@@ -124,7 +175,7 @@ if(NOT LibArchive_FOUND)
     # Obtain compression library dependencies
     #-----------------------------------------------------------------------------
     if(ENABLE_LZ4)
-        if(libarchive_superbuild_USE_LOCAL_PACKAGES)
+        if(libarchive_sb_USE_LOCAL_PACKAGES AND (NOT libarchive_sb_LZ4_FORCE_CPM))
             if(USING_MSVC_STL)
                 find_package(lz4 OPTIONAL CONFIG)
             else()
@@ -143,23 +194,23 @@ if(NOT LibArchive_FOUND)
                 "BUILD_SHARED_LIBS OFF"
                 "BUILD_STATIC_LIBS ON"
                 "LZ4_BUILD_CLI OFF"
-                NAME lz4
+                NAME lz4_local
             )
             # This is a hack to trick the ancient-style CMakeLists script in libarchive
             set(LZ4_LIBRARY lz4)
-            set(LZ4_INCLUDE_DIR ${lz4_SOURCE_DIR}/lib)
+            set(LZ4_INCLUDE_DIR ${lz4_local_SOURCE_DIR}/lib)
             find_package_handle_standard_args(LZ4 DEFAULT_MSG LZ4_LIBRARY LZ4_INCLUDE_DIR)
 
             if(NOT LZ4_FOUND)
                 message(FATAL_ERROR "lz4: CMake was not successful is obtaining and setting up lz4 using CPM (attempt to build from source).
-                 This should never happen unless the underlying repo is broken or otherwise made incompatible.")
+                 This should never happen unless the upstream repo is broken or otherwise made incompatible.")
             endif()
 
         endif()
     endif()
 
     if(ENABLE_LZO)
-        if(libarchive_superbuild_USE_LOCAL_PACKAGES)
+        if(libarchive_sb_USE_LOCAL_PACKAGES AND (NOT libarchive_sb_LZO_FORCE_CPM))
             if(USING_MSVC_STL)
                 find_package(lzo2 OPTIONAL CONFIG)
             else()
@@ -177,26 +228,27 @@ if(NOT LibArchive_FOUND)
                 OPTIONS
                 "ENABLE_STATIC ON"
                 "ENABLE_SHARED OFF"
-                NAME lzo2
+                NAME lzo2_local
             )
             # This is a hack to trick the ancient-style CMakeLists script in libarchive
             set(LZO2_LIBRARY lzo_static_lib)
-            set(LZO2_INCLUDE_DIR ${lzo2_SOURCE_DIR}/include)
+            set(LZO2_INCLUDE_DIR ${lzo2_local_SOURCE_DIR}/include)
             find_package_handle_standard_args(LZO2 DEFAULT_MSG LZO2_LIBRARY LZO2_INCLUDE_DIR)
             if(NOT LZO2_FOUND)
                 message(FATAL_ERROR "lzo2: CMake was not successful is obtaining and setting up lzo2 using CPM (attempt to build from source).
-                 This should never happen unless the underlying repo is broken or otherwise made incompatible.")
+                 This should never happen unless the upstream repo is broken or otherwise made incompatible.")
             endif()
         endif()
     endif()
 
     if(ENABLE_LZMA)
-        if(libarchive_superbuild_USE_LOCAL_PACKAGES)
+        if(libarchive_sb_USE_LOCAL_PACKAGES AND (NOT libarchive_sb_LZMA_FORCE_CPM))
             find_package(LibLZMA OPTIONAL)
         endif()
 
         # set(LZMA_API_STATIC ON)
         if(NOT LibLZMA_FOUND)
+            set(CPM_USE_LOCAL_PACKAGES OFF) # Temporary hack that I should probably fix later
             CPMAddPackage(
                 URI "gh:tukaani-project/xz@5.8.2"
                 OPTIONS
@@ -213,23 +265,24 @@ if(NOT LibArchive_FOUND)
                 "XZ_DOC OFF"
                 NAME LibLZMA
             )
+            unset(CPM_USE_LOCAL_PACKAGES) # Temporary hack that I should probably fix later
 
             # This is a hack to trick the ancient-style CMakeLists script in libarchive
             set(LIBLZMA_LIBRARY liblzma)
-            set(LIBLZMA_LIBRARIES liblzma)
-            set(LIBLZMA_INCLUDE_DIR ${xz_SOURCE_DIR}/src/liblzma/api)
-            set(LIBLZMA_INCLUDE_DIRS ${xz_SOURCE_DIR}/src/liblzma/api)
+            set(LIBLZMA_LIBRARIES ${LIBLZMA_LIBRARY})
+            set(LIBLZMA_INCLUDE_DIR ${LibLZMA_SOURCE_DIR}/src/liblzma/api)
+            set(LIBLZMA_INCLUDE_DIRS ${LIBLZMA_INCLUDE_DIR})
             find_package_handle_standard_args(LIBLZMA DEFAULT_MSG LIBLZMA_LIBRARY LIBLZMA_INCLUDE_DIR)
 
             if(NOT LIBLZMA_FOUND)
                 message(FATAL_ERROR "LibLZMA: CMake was not successful is obtaining and setting up LibLZMA using CPM (attempt to build from source).
-                 This should never happen unless the underlying repo is broken or otherwise made incompatible.")
+                 This should never happen unless the upstream repo is broken or otherwise made incompatible.")
             endif()
         endif()
     endif()
 
     if(ENABLE_ZSTD)
-        if(libarchive_superbuild_USE_LOCAL_PACKAGES)
+        if(libarchive_sb_USE_LOCAL_PACKAGES AND (NOT libarchive_sb_ZSTD_FORCE_CPM))
             if(USING_MSVC_STL)
                 find_package(zstd OPTIONAL CONFIG)
             else()
@@ -250,23 +303,22 @@ if(NOT LibArchive_FOUND)
                 "ZSTD_BUILD_PROGRAMS OFF"
                 "ZSTD_BUILD_CONTRIB OFF"
                 "ZSTD_BUILD_TESTS OFF"
-                NAME zstd
+                NAME zstd_local
             )
             # This is a hack to trick the ancient-style CMakeLists script in libarchive
             set(ZSTD_LIBRARY libzstd)
-            set(ZSTD_INCLUDE_DIR ${lzo2_SOURCE_DIR}/include)
+            set(ZSTD_INCLUDE_DIR ${zstd_local_SOURCE_DIR}/include)
             find_package_handle_standard_args(ZSTD DEFAULT_MSG ZSTD_LIBRARY ZSTD_INCLUDE_DIR)
             if(NOT ZSTD_FOUND)
                 message(FATAL_ERROR "zstd: CMake was not successful is obtaining and setting up zstd using CPM (attempt to build from source).
-                 This should never happen unless the underlying repo is broken or otherwise made incompatible.")
+                 This should never happen unless the upstream repo is broken or otherwise made incompatible.")
             endif()
         endif()
     endif()
 
 
-
     if(ENABLE_ZLIB)
-        if(libarchive_superbuild_USE_LOCAL_PACKAGES)
+        if(libarchive_sb_USE_LOCAL_PACKAGES AND (NOT libarchive_sb_ZLIB_FORCE_CPM))
             find_package(ZLIB OPTIONAL)
         endif()
 
@@ -280,17 +332,17 @@ if(NOT LibArchive_FOUND)
                 "ZLIB_INSTALL_COMPAT_DLL OFF"
                 "ZLIB_BUILD_TESTING OFF"
                 "ZLIB_BUILD_MINIZIP OFF"
-                NAME ZLIB
+                NAME ZLIB_LOCAL
             )
             # This is a hack to trick the ancient-style CMakeLists script in libarchive
             set(ZLIB_LIBRARY zlibstatic)
             set(ZLIB_LIBRARIES ${ZLIB_LIBRARY})
-            set(ZLIB_INCLUDE_DIR ${zlib_SOURCE_DIR})
+            set(ZLIB_INCLUDE_DIR ${ZLIB_LOCAL_SOURCE_DIR})
             find_package_handle_standard_args(ZLIB DEFAULT_MSG ZLIB_LIBRARY ZLIB_INCLUDE_DIR)
 
             if(NOT ZLIB_FOUND)
                 message(FATAL_ERROR "ZLIB: CMake was not successful is obtaining and setting up ZLIB using CPM (attempt to build from source).
-                 This should never happen unless the underlying repo is broken or otherwise made incompatible.")
+                 This should never happen unless the upstream repo is broken or otherwise made incompatible.")
             endif()
         endif()
     endif()
@@ -299,27 +351,28 @@ if(NOT LibArchive_FOUND)
 
 
 
-
     #-----------------------------------------------------------------------------
     # Obtain libarchive
     #-----------------------------------------------------------------------------
+
+    # Notes: 
+
     CPMAddPackage(
         URI "gh:libarchive/libarchive@3.8.5"
         OPTIONS
         "ENABLE_LIBB2 OFF"
         "ENABLE_EXPAT OFF"
-        "ENABLE_ICONV OFF"
         # "ENABLE_LIBGCC OFF"
         # "ENABLE_PCREPOSIX OFF"
         # "ENABLE_PCRE2POSIX OFF"
         # "LIBLZMA_INCLUDE_DIRS ${LibLZMA_SOURCE_DIR}/src/liblzma/api"
         # "LIBLZMA_LIBRARIES liblzma"
-        "ENABLE_TAR OFF"
-        "ENABLE_CPIO OFF"
-        "ENABLE_CAT OFF"
-        "ENABLE_UNZIP OFF"
-        "ENABLE_TEST OFF"
-        "ENABLE_INSTALL OFF"
+        "ENABLE_XATTR ${libarchive_sb_XATTR}"
+        "ENABLE_ACL ${libarchive_sb_ACL}"
+        "ENABLE_TEST ${libarchive_sb_ENABLE_TEST}"
+        "ENABLE_COVERAGE ${libarchive_sb_ENABLE_COVERAGE}"
+        "ENABLE_INSTALL ${libarchive_sb_ENABLE_INSTALL}"
+        "LibLZMA_FIND_QUIETLY OFF"
         NAME LibArchive_LOCAL
     )
 
